fix: フラッシュメッセージにz-indexを追加
ページによって要素と重複し隠れてしまうため

--- a/app/assets/stylesheets/partials/shared/message.scss
+++ b/app/assets/stylesheets/partials/shared/message.scss
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1
 }
 
 .flash-animation {
